--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
 node_modules/
+.env
+dist/
+build/
+*.js
+*.js.map
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+.eslintcache
+.prettierignore
+dist/
+out/
+build/
+
+# If you choose not to commit lock files
+package-lock.json
