--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "eslint": "^9.13.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-react": "^7.37.2",
-    "typescript-eslint": "^8.11.0"
+    "typescript-eslint": "^8.11.0",
+    "vite": "^5.4.10"
   },
   "name": "react-event-oct-24",
   "version": "1.0.0",
