--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "devDependencies": {
     "@eslint/js": "^9.13.0",
-    "eslint": "^9.13.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.3",
+    "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-react": "^7.37.2",
+    "typescript": "^5.6.3",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
   },
@@ -175,6 +179,8 @@
     "prop-types": "^15.8.1",
     "punycode": "^2.3.1",
     "queue-microtask": "^1.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-is": "^16.13.1",
     "reflect.getprototypeof": "^1.0.6",
     "regexp.prototype.flags": "^1.5.3",
@@ -223,7 +229,11 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,scss,md}\""
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,scss,md}\"",
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "",
