--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,19 @@
 {
-    "extends": [
-      "airbnb",      
-      "prettier"
-    ],
-    "plugins": ["prettier"],
-    "rules": {
-      "prettier/prettier": "error"
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "prettier"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "plugins": [
+    "react",
+    "@typescript-eslint"
+  ],
+  "rules": {
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
     }
   }
+}
