--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@mui/icons-material": "^6.1.5",
+    "@mui/joy": "^5.0.0-beta.48",
+    "@mui/material": "^6.1.5",
     "acorn": "^8.13.0",
     "acorn-jsx": "^5.3.2",
     "ajv": "^6.12.6",
