--- a/package.json
+++ b/package.json
@@ -189,6 +189,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-is": "^16.13.1",
+    "react-redux": "^9.1.2",
     "react-toastify": "^10.0.6",
     "reflect.getprototypeof": "^1.0.6",
     "regexp.prototype.flags": "^1.5.3",
