--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
-    "prettier"
+    "prettier",
+    "plugin:react/jsx-runtime"
   ],
   "parser": "@typescript-eslint/parser",
   "plugins": [
@@ -10,6 +11,7 @@
     "@typescript-eslint"
   ],
   "rules": {
+    "react/react-in-jsx-scope": "off"
   },
   "settings": {
     "react": {
