--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/icons-material": "^6.1.5",
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.5",
+    "@reduxjs/toolkit": "^2.3.0",
     "acorn": "^8.13.0",
     "acorn-jsx": "^5.3.2",
     "ajv": "^6.12.6",
