--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^6.1.5",
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.5",
@@ -189,6 +190,7 @@
     "queue-microtask": "^1.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
     "react-is": "^16.13.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
