--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
     "language-tags": "^1.0.9",
     "levn": "^0.4.1",
     "locate-path": "^6.0.0",
+    "lodash.debounce": "^4.0.8",
     "lodash.merge": "^4.6.2",
     "loose-envify": "^1.4.0",
     "minimatch": "^3.1.2",
